--- a/src/Info.css
+++ b/src/Info.css
@@ -15,6 +15,19 @@
 .Info #date-formatted {
 	margin-top: 0px;
 	margin-bottom: 0px;
-	font-size: 50px;
+	font-size: 30px;
 	font-weight: bold;
+}
+
+.Info .temperatureUnits {
+	font-size: 80px;
+}
+
+.Info #humidityID {
+	font-size: 30px;
+	margin-top: 20px;
+}
+
+.Info #windID {
+	font-size: 30px;
 }
