--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,16 @@
 .App .column {
 	column-width: 300px;
 }
+
+.SearchForm {
+	margin-top: 30px;
+}
+
+.App .btn {
+	min-width: 110px;
+}
+
+.col-3 {
+	margin-right: 45px;
+	min-width: 93px;
+}
