--- a/src/CurrentLocation.css
+++ b/src/CurrentLocation.css
@@ -2,11 +2,10 @@
 	margin-top: 50px;
 }
 
-.CurrentLocation button {
-	padding: 5px 10px;
-	margin-top: 20px;
-	color: black;
+.currentLocation {
 	border-width: 1px;
 	border-radius: 30px;
 	box-shadow: 0px;
+	margin-left: 185px;
+	margin-top: 10px;
 }
