--- a/src/Info.css
+++ b/src/Info.css
@@ -1,15 +1,17 @@
-.Info #weatherDescription {
+.weatherDescription {
 	font-size: 20px;
 	text-transform: capitalize;
 	margin-top: 0px;
 	margin-bottom: 0px;
+	padding: 0 auto;
 }
 
-.Info #city_selected {
+.Info .city_selected {
 	margin-top: 0px;
 	margin-bottom: 0px;
 	font-size: 100px;
 	font-weight: bold;
+	padding: 0 auto;
 }
 
 .Info #date-formatted {
@@ -17,6 +19,7 @@
 	margin-bottom: 0px;
 	font-size: 35px;
 	font-weight: bold;
+	padding: 0 auto;
 }
 
 .Info .temperatureUnits {
@@ -31,4 +34,9 @@
 .Info #windID {
 	font-size: 30px;
 	margin-left: 20px;
+}
+
+.weatherIcon {
+	margin-left: 50px;
+	font-size: 100px;
 }
